--- a/app/src/main/res/drawable/profilepic_border.xml
+++ b/app/src/main/res/drawable/profilepic_border.xml
@@ -2,11 +2,9 @@
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
     android:shape="rectangle">
     <corners
-        android:radius="1dp"
-    android:topRightRadius="0dp"
-        android:bottomRightRadius="0dp"
-        android:bottomLeftRadius="0dp" />
+        android:radius="3dp"
+   />
     <stroke
         android:width="1dp"
-        android:color="@color/red_error" />
+        android:color="#9B9B9B" />
 </shape>
