--- a/app/src/main/res/layout/activity_signup.xml
+++ b/app/src/main/res/layout/activity_signup.xml
@@ -23,7 +23,6 @@
         android:layout_height="match_parent"
         android:fillViewport="true">
 
-
     <LinearLayout
         android:orientation="vertical"
         android:layout_gravity="center_vertical"
@@ -36,10 +35,10 @@
             android:layout_height="wrap_content"
             android:layout_marginTop="35dp">
             <EditText
+                android:inputType="textCapSentences"
                 android:singleLine="true"
                 android:layout_width="250dp"
                 android:layout_height="wrap_content"
-                android:inputType="textPersonName"
                 android:ems="10"
                 android:id="@+id/etFirstName"
                 android:hint="First Name"
@@ -55,7 +54,7 @@
                 android:singleLine="true"
                 android:layout_width="250dp"
                 android:layout_height="wrap_content"
-                android:inputType="textPersonName"
+                android:inputType="textCapSentences"
                 android:ems="10"
                 android:id="@+id/etLastName"
                 android:hint="Last Name"
