--- a/app/src/main/res/layout/item_comment.xml
+++ b/app/src/main/res/layout/item_comment.xml
@@ -108,7 +108,7 @@
                 android:id="@+id/txtComment"
                 android:layout_width="275dp"
                 android:layout_height="wrap_content"
-                android:textColor="#3090C7"
+                android:textColor="#c6cbce"
                 android:paddingBottom="5dp"
                 android:paddingLeft="@dimen/feed_item_status_pad_left_right"
                 android:paddingRight="@dimen/feed_item_status_pad_left_right"
