--- a/app/src/main/res/layout/activity_resetpassword.xml
+++ b/app/src/main/res/layout/activity_resetpassword.xml
@@ -75,13 +75,12 @@
         android:layout_height="wrap_content"
         android:layout_gravity="center_horizontal">
 
-        <Button
-            android:id="@+id/bSavePassword"
-            android:paddingLeft="10dp"
-            android:paddingRight="10dp"
-            android:text="Change Password"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content" />
+        <ImageButton
+            android:layout_width="120dp"
+            android:layout_height="60dp"
+            android:id="@+id/imgbSavePassword"
+            android:background="@drawable/change_password" />
+
     </LinearLayout>
 
 
