--- a/app/src/main/res/layout/activity_slidingdrawer.xml
+++ b/app/src/main/res/layout/activity_slidingdrawer.xml
@@ -9,15 +9,30 @@
     android:id="@+id/drawerLayoutMain">
 
 
+    <RelativeLayout
+        android:id="@+id/layouttop"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:orientation="vertical">
+
     <include
         layout="@layout/frag_toolbar_main"
         android:layout_width="match_parent"
-        android:layout_height="match_parent" />
+        android:layout_height="match_parent"
+        android:layout_alignParentTop="true"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true" />
+
     <RelativeLayout
         android:id="@+id/rLayoutMain"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:orientation="vertical">
+        android:orientation="vertical"
+        android:layout_alignParentTop="true"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true"
+        android:layout_marginTop="77dp">
+    </RelativeLayout>
     </RelativeLayout>
 
     <ListView
