--- a/app/src/main/res/layout/frag_toolbar_main.xml
+++ b/app/src/main/res/layout/frag_toolbar_main.xml
@@ -2,9 +2,8 @@
 <android.support.design.widget.CoordinatorLayout
     android:id="@+id/main_content"
     xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
-    android:fitsSystemWindows="false"
+    android:fitsSystemWindows="true"
     android:layout_height="match_parent"
     xmlns:local="http://schemas.android.com/tools"
     android:background="#000000">
@@ -24,7 +23,9 @@
                 android:layout_height="80dp"
                 android:background="@drawable/top_banner"
                 local:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
-                local:popupTheme="@style/ThemeOverlay.AppCompat.Light">
+                local:popupTheme="@style/ThemeOverlay.AppCompat.Light"
+                android:paddingBottom="0dp"
+                android:layout_marginBottom="0dp">
             </ImageView>
 
         </LinearLayout>
